Make sure header is always visible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,8 @@ body {
 header {
     background-color: aqua;
     width: 100%;
+    position: fixed;
+    z-index: 99;
 }
 
 main {
